# rusty_feira

./: Cargo.toml  docker-compose.yml
db/: 1697160396_init_database.sql
src/: main.rs  persistence.rs
